--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,7 +472,7 @@ header .content_form a.inquire_now{text-decoration:none;float: right;color: #fff
 .contcact_form .contact-info form .read_more{margin-left:15px;}
 header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 .navbar-toggle .icon-bar{width: 25px!important;height:3px!important;}
-.navbar-white .navbar-toggle .icon-bar {background: #0061af!important;}
+.navbar-white .navbar-toggle .icon-bar {/* background: #0061af!important; */}
 .navbar-toggle{margin-top:40px!important;}
 .section_aboutus .view_more{margin-top:20px;}
 /*====== end landing page css =====*/
@@ -506,7 +506,7 @@ header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 
 /*====== start about_us section css =====*/	
 .about_us .intro .section_aboutus h3,.about_us .intro .our_vision_mission h3,.why_us .intro .whychooseus h3{margin: 0px 0px 30px 0px;color: #a6ce38;font-weight: 400;font-size: 30px;letter-spacing: 1px;}
-.about_us .intro .section_aboutus p,.about_us .intro .our_vision_mission p,.why_us .intro .whychooseus p,.our_clients .intro .ourclients_head p{color:#fff;}
+.about_us .intro .section_aboutus p,.about_us .intro .our_vision_mission p,.why_us .intro .whychooseus p,.our_clients .intro .ourclients_head p,.our_services .intro .ourservices_head p,.work_wrapper .intro .ourwork_head p,.our_process .intro .ourprocess_head p{color:#fff;}
 .about_us .intro .section_aboutus .banner_btn{margin-top:15px;}
 .about_us .vertical-title span{color:#fff;}
 .about_us .intro .section_aboutus img,.about_us .intro .our_vision_mission img{margin-top: 20px;box-shadow:0 0px 50px 0 rgba(255, 255, 255, 0.2);border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;}
@@ -515,7 +515,7 @@ header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 /*====== end about_us section css =====*/
 
 /*====== start why_us section css =====*/
-.why_us .intro .whychooseus,.our_clients .intro .ourclients_head{padding: 0px 0px 25px 0px;text-align:center;}
+.why_us .intro .whychooseus,.our_clients .intro .ourclients_head,.our_services .intro .ourservices_head,.work_wrapper .intro .ourwork_head,.our_process .intro .ourprocess_head{padding: 0px 0px 25px 0px;text-align:center;}
 .why_us .intro .whychooseus h3{margin-bottom:15px;}
 .why_us .intro .why_chooseus_wrap .whychooseus_box{text-align: center;color: #222;}
 .why_us .intro .why_chooseus_wrap .whychooseus_box i{color: #0061af;font-size: 36px;}
@@ -538,7 +538,7 @@ header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 .slider .owl-carousel_services .owl-item .caption .project_desc ul li span{font-weight: 600;color:#000}
 .slider .owl-carousel_services .owl-item .caption .technology_used{padding: 25px 0px;}
 .slider	.view_all_services{position: fixed;bottom: 0%;left: 50%;z-index: 10;}
-.slider	.view_all_services .banner_btn{padding:6px 10px;opacity: 0.85;}
+.slider	.view_all_services .banner_btn{padding:6px 10px;opacity: 0.85;margin-bottom: 35px;}
 .boxed .row-project-box .view_more_box .view_all_works .banner_btn,.boxed .row-partners .view_more_clients .view_all_clients .banner_btn{opacity: 0.85;background: #a6ce39;color: #ffffff;border-radius: 50%;width: 35px;height: 35px;text-align: center;padding: 0px;line-height: 33px;}
 .boxed .row-project-box .view_more_box .view_all_works,.boxed .row-partners .view_more_clients .view_all_clients{transition: all 0.3s ease;border: 1px solid #fff;background: linear-gradient( rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65) );margin-top: 30px;text-align: center;padding: 12px 15px;}
 .boxed .row-partners .view_more_clients .view_all_clients h5{margin: 15px 0px;font-size: 18px;}
@@ -766,7 +766,7 @@ body.overflow_body{overflow: hidden;}
     display: block;
     padding: 40px;
     color: #fff;    background-color: #0061af;}
-.career .intro .career_position_content	.apply_btn .apply_now:hover{background:#fff;color:#0061af;}
+.career .intro .career_position_content	.apply_btn .apply_now:hover,.career .intro .career_position_content	.apply_btn .apply_now:hover p{background:#fff;color:#0061af;}
 .career .intro .career_position_content	.apply_btn .apply_now:after, .career .intro .career_position_content	.apply_btn .apply_now:before {
     width: 80px;
     height: 50%;
@@ -801,7 +801,7 @@ body.overflow_body{overflow: hidden;}
 .header_links.social_links li a{color:#0061AF;}
 .pp-tooltip::after {content: "";position: absolute;top: 50%;left: 100%;margin-top: -5px;border-width: 5px;border-style: solid;border-color: transparent transparent transparent #000;}
 .pp-tooltip{background:#000;color:#fff;border-radius:3px;padding:0px 10px;top:-10px;}
-.section_aboutus p,.about_us .intro .our_vision_mission p,.why_us .intro .whychooseus p,.our_clients .intro .ourclients_head p{font-size:16px;margin-bottom: 5px;line-height: 28px;}
+.section_aboutus p,.about_us .intro .our_vision_mission p,.why_us .intro .whychooseus p,.our_clients .intro .ourclients_head p,.our_services .intro .ourservices_head p,.work_wrapper .intro .ourwork_head p,.our_process .intro .ourprocess_head p{font-size:16px;margin-bottom: 5px;line-height: 28px;}
 .resume-content ul li{display: inline-block;width: 28px;height: 28px;margin: 0 5px;transition: all .25s ease-out;}
 .section-3 .title-uppercase,.section-3 .vertical-title span,.section-6 .title-uppercase,.section-6 .vertical-title span{color:#fff;}
 .navbar-toggle a.inquire_now{text-decoration:none;float: right;color: #fff!important;text-transform: uppercase;font-size: 16px;padding: 10px 20px!important;font-weight: 400;background: #0061AF;line-height: 18px;}
@@ -1141,7 +1141,7 @@ a.brand:focus{
 .menu-list .active > a,
 .menu-list li a:hover{
   text-decoration: none;
-  color: #fff;}
+  color: #0061af;}
 
 .menu-list > li{
   font-size: 1.95rem;
@@ -4598,7 +4598,7 @@ a.brand:focus{
 .menu-list .active > a,
 .menu-list li a:hover{
   text-decoration: none;
-  color: #fff;}
+  color: #0061af;}
 
 .menu-list > li{
   font-size: 1.65rem;
