--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,6 +475,34 @@ header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 .navbar-white .navbar-toggle .icon-bar {/* background: #0061af!important; */}
 .navbar-toggle{margin-top:40px!important;}
 .section_aboutus .view_more{margin-top:20px;}
+.menu .nav .dropdown.open .caret{border-top: none;border-bottom: 6px solid #0061af;}
+.menu .nav{padding:25px;}
+.menu .nav > li > a{    color: #222;
+    font-size: 24px;
+    font-weight: 600; line-height:25px; padding:20px 15px;}
+.menu .nav .caret	{border-top: 6px dashed;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;}
+	
+	.menu .nav > li > a:hover, .menu .nav > li > a:focus,.menu .nav .open {
+    background-color: transparent!important; color:#0061AF;
+}
+.menu .nav .dropdown-menu {
+    border-radius: 0px;
+    top: -10px;
+    left: 0%;
+    width: 100%;
+    border: 0px;
+    position: relative;
+    background: none;
+    box-shadow: none;
+    padding: 0 0 0 10px;
+    margin: 0 0 20px 0;
+}
+
+.dropdown-menu > li > a{color:#222;font-size:16px;}
+.dropdown-menu > li > a i{margin-right:5px;}
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus{background-color:transparent; color:#0061AF;}
 /*====== end landing page css =====*/
 
 /*====== start process section css =====*/	
@@ -663,6 +691,8 @@ header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 /*====== end our_clients section css =====*/
 
 /*====== start career section css =====*/
+.career .intro .career_wrapper .owl-carousel .owl-nav{    bottom: -15px;
+    right: 15px;}
 .vertical-tab{ display: table; }
 .vertical-tab .nav-tabs{display: table-cell;width: 25%;min-width: 25%;border: none;position: relative;}
 .vertical-tab .nav-tabs li{float: none;vertical-align: top;margin: 5px 10px;display: inline-block;font-size:14px;}
@@ -699,7 +729,7 @@ body.overflow_body{overflow: hidden;}
 .career .intro .career_boxes .career_box_content{position: relative;padding: 20px 10px 40px;text-align: center;color: #222;background-color: #fff;transition: all .3s ease;}
 .career .intro .career_boxes{position: absolute;
     top: 50%;
-    right: -5%;
+    right: -2%;
     width: 80%;
     transform: translateY(-50%);}
 .career .intro .career_boxes .career_box_content a:after{position: absolute;
@@ -740,7 +770,7 @@ body.overflow_body{overflow: hidden;}
 .career .intro .career_position_type{position:relative;}
 
 .career .intro .career_position_content h2:after { content: "";
-    left: 22%;
+    left: 35%;
     right: 0;
     height: 2px;
 	    position: absolute;
@@ -768,7 +798,8 @@ body.overflow_body{overflow: hidden;}
 	cursor:pointer;
     padding: 38px 40px;
     color: #fff;    background-color: #0061af;}
-.career .intro .career_position_content	.apply_btn .apply_now:hover,.career .intro .career_position_content	.apply_btn .apply_now:hover p{background:#fff;color:#0061af;}
+.career .intro .career_position_content	.apply_btn .apply_now:hover{background:#fff;color:#0061af;}
+.career .intro .career_position_content	.apply_btn .apply_now:hover p{color:#0061af;}
 .career .intro .career_position_content	.apply_btn .apply_now:after, .career .intro .career_position_content	.apply_btn .apply_now:before {
     width: 80px;
     height: 50%;
