--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,7 +622,10 @@ header .content_form .inquire_now{margin: 30px 30px 0px 0px;cursor:pointer;}
 .roadmap__navigation > * a:hover {text-decoration: none;-webkit-box-shadow: none;box-shadow: none;}
 .roadmap__navigation > :first-child {left: 0px;}
 .roadmap__navigation > :last-child {right: 0px;}
-.roadmap.roadmap--initialized .roadmap__events:after {width: 100%;}
+:root {
+  --width-left: 100%;
+}
+.roadmap.roadmap--initialized .roadmap__events:after {width: var(--width-left);}
 .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:before {-webkit-transform: scale(1) translateX(-50%);-ms-transform: scale(1) translateX(-50%);-o-transform: scale(1) translateX(-50%);transform: scale(1) translateX(-50%);}
 .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event:after {height: 62px;}
 .roadmap.roadmap--initialized .roadmap__events .roadmap__events__event .event {-webkit-transform: scale(1);-ms-transform: scale(1);-o-transform: scale(1);transform: scale(1);}
@@ -3482,8 +3485,10 @@ a.brand:focus{
 /*-------------------------------------------------------------------------------
   7. Footer
 -------------------------------------------------------------------------------*/
-
-
+#cookie_directive_container{position:fixed; bottom: 0; left: 0; width: 100%; background: #fff; padding: 15px; border-top:1px solid #ccc;
+box-shadow:1px 1px 5px #000; z-index:99999; }
+#cookie_directive_container p{margin: 0;}
+#cookie_directive_container .view_more {background: #0061AF;color: #fff; margin: 0;}
 .footer{
   color: #fff;
   line-height: 1.71;}
